# AdsUI

./: .gitignore  ADS1256.cpp  ADS1256.hpp  AdsReader.cpp  AdsReader.hpp  CMakeLists.txt  DEV_Config.cpp  DEV_Config.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  waveshare35a-custom.dts  схема.txt
